@@ -1,4 +1,4 @@
-/* Time-stamp: <2003-06-22 13:43:16 jcs>
+/* Time-stamp: <2003-06-26 22:45:39 jcs>
 |
 |  Copyright (C) 2002-2003 Jorg Schuler <jcsjcs at users.sourceforge.net>
 |  Part of the gtkpod project.
